# TrueSightQ-Multimodal-AI-Generated-Content-Detection-with-Quantum-Techniques-and-Web3-Integration

./: .gitignore  CONTRIBUTING.md  LICENSE  QUANTUM_ENHANCEMENT_README.md  README.md  class_to_idx.json  dataset.ipynb  pyproject.toml  test_new_model.py  test_original_model.py  test_quantum_video_detector.py  test_system.py
backend/: requirements.txt  retrain_balanced.py  train_ai_detector.py  train_pytorch_detector.py
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  audio_detector.py  image_detector.py  text_detector.py  video_detector.py
frontend/: package-lock.json  package.json
frontend/pages/: _app.js  _document.js  index.js
frontend/styles/: globals.css  paper.css
