[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-content-detector"
version = "1.0.0"
description = "AI Content Detector with Quantum Enhancements"
authors = [{name = "AI Content Detector Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "tensorflow",
    "torch",
    "opencv-python",
    "pillow",
    "numpy",
    "librosa",
    "soundfile",
    "pennylane",
    "nltk",
    "transformers",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pylance]
python.analysis.extraPaths = ["./backend"]

[tool.pyright]
include = ["backend"]
extraPaths = ["./backend"]
